--- a/docker-compose_fhir_validator.yml
+++ b/docker-compose_fhir_validator.yml
@@ -4,6 +4,7 @@ services:
         ports:
             - '4435:4849'
         volumes:
-            - '${HOME}/Scratch/data:/home/service/data'
-            - '${HOME}/Technical_Specialist_Folder/fhir/Assets/NHSD.Assets.STU3_1.4.0/node_modules/NHSD.Assets.STU3:/home/service/fhir'
-        image: 'nhsdigitalmait/fhir_validator_config:20210211'
+            - '/home/riro/Scratch/data:/home/service/data'
+            - '/home/riro/Technical_Specialist_Folder/fhir/Assets/NHSD.Assets.STU3_1.4.0/node_modules/NHSD.Assets.STU3:/home/service/fhir/STU3'
+            - '/home/riro/Technical_Specialist_Folder/fhir/Assets/UKCore.R4.STU.02.00.00/package:/home/service/fhir/R4'
+        image: 'nhsdigitalmait/fhir_validator_config:20210805'
