--- a/tkw-x.multiversion.properties
+++ b/tkw-x.multiversion.properties
@@ -28,7 +28,7 @@ tks.savedmessages TKW_ROOT/config/FHIR_VALIDATOR_SERVER/all_evidence
 tks.transportlist HttpTransport
 #
 tks.HttpTransport.listenaddr 0.0.0.0
-tks.HttpTransport.listenport 4849
+tks.HttpTransport.listenport 4435
 
 # The adminlistenport and adminlistenaddr is used by the TKW MTH console for dynamic reconfiguration of the simulator ruleset
 # and provision of the getepoch service
@@ -133,8 +133,6 @@ tks.validator.check.cdarenderer	uk.nhs.digital.mait.tkwx.tk.internalservices.val
 
 # Validator FHIR Version
 tks.validator.hapifhirvalidator.stu3.fhir.version DSTU3
-# Version Numbers for the reports
-tks.validator.hapifhirvalidator.stu3.softwareversion 5.1.0 2020-08-13
 # Assets
 tks.validator.hapifhirvalidator.stu3.assetdir /home/riro/Technical_Specialist_Folder/fhir/Assets/NHSD.Assets.STU3_1.4.0/node_modules/NHSD.Assets.STU3
 tks.validator.hapifhirvalidator.stu3.assetdir.ignore /home/riro/Technical_Specialist_Folder/fhir/Assets/NHSD.Assets.STU3_1.4.0/node_modules/NHSD.Assets.STU3/examples/
@@ -160,12 +158,10 @@ tks.validator.hapifhirvalidator.stu3.primingresource TKW_ROOT/config/FHIR_VALIDA
 
 # Validator FHIR Version
 tks.validator.hapifhirvalidator.r4.fhir.version R4
-# Version Numbers for the reports
-tks.validator.hapifhirvalidator.r4.softwareversion 5.1.0 2020-08-13
 # Assets
-tks.validator.hapifhirvalidator.r4.assetdir /home/riro/Technical_Specialist_Folder/fhir/Assets/R4_EPS/package
-tks.validator.hapifhirvalidator.r4.assetdir.ignore /home/riro/Technical_Specialist_Folder/fhir/Assets/R4_EPS/package/examples/
-tks.validator.hapifhirvalidator.r4.profileversionfilelocation /home/riro/Technical_Specialist_Folder/fhir/Assets/R4_EPS/package/package.json
+tks.validator.hapifhirvalidator.r4.assetdir /home/riro/Scratch/20210819/package
+tks.validator.hapifhirvalidator.r4.assetdir.ignore /home/riro/Scratch/20210819/package/examples/
+tks.validator.hapifhirvalidator.r4.profileversionfilelocation /home/riro/Scratch/20210819/package/package.json
 # Validation options
 tks.validator.hapifhirvalidator.r4.schemavalidate N
 tks.validator.hapifhirvalidator.r4.schematronvalidate N
@@ -174,6 +170,8 @@ tks.validator.hapifhirvalidator.r4.strictparservalidation N
 #switch to turn on/off terminology checking
 tks.validator.hapifhirvalidator.r4.noterminologychecks N
 #tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.remoteterminologyserviceurl https://ontology.nhs.uk/production1/fhir
+tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.remoteterminologyserviceurl https://ontology.nhs.uk/staging/fhir
+#tks.validator.hapifhirvalidator.r4.terminologyserveraccesstokenlocation /home/riro/Technical_Specialist_Folder/TerminologyServer/TerminologyServerLoginDetails/fhir_terminology_server_access_token.txt
 #Lowest report level. Allowable levels in ascending order are: INFORMATION, WARNING, ERROR, FATAL
 tks.validator.hapifhirvalidator.r4.minimumreportlevel INFORMATION
 #There can be any number of filters which need to be incrementally indexed from 0. The first term defines which report level should be filtered and the rest is the term on which to filter
@@ -185,10 +183,15 @@ tks.validator.hapifhirvalidator.r4.filter.2 ERROR Unable to find matching profil
 # This way all the profiles will be loaded into hapi fhir validator library 
 tks.validator.hapifhirvalidator.r4.primingresource TKW_ROOT/config/FHIR_VALIDATOR_SERVER/validator_config/primingresource/R4_primer.xml
 
+tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.caching N
+tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.commoncodesystemsterminologyservice Y
+tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.inmemoryterminologyserver Y
+tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.prepopulated Y
 
 tks.validator.interaction.map.TESTYTEST POST ^.*$
 
 tks.classname.Validator	uk.nhs.digital.mait.tkwx.tk.internalservices.ValidatorService
+tks.classname.LastResortReporter uk.nhs.digital.mait.tkwx.http.FhirLastResortReporter
 
 # added by TKWPropertiesEditor on Fri Mar 18 16:51:21 GMT 2016
 #tks.transmitter.send.chunksize 0
@@ -211,7 +214,7 @@ tks.HttpTransport.suppress.close Y
 #tks.fhir.version Dstu2
 
 # 1.2 structured
-tks.fhir.version Dstu3
+tks.fhir.version R4
 
 
 #Turn off the log signing so that the evidence folder is not cluttered
