--- a/docker-compose_fhir_validator.yml
+++ b/docker-compose_fhir_validator.yml
@@ -1,10 +1,12 @@
 version: '2.0'
 services:
     fhir_validator_config:
-        ports:
-            - '4435:4849'
+        network_mode : "host"
         volumes:
-            - '/home/riro/Scratch/data:/home/service/data'
-            - '/home/riro/Technical_Specialist_Folder/fhir/Assets/NHSD.Assets.STU3_1.4.0/node_modules/NHSD.Assets.STU3:/home/service/fhir/STU3'
-            - '/home/riro/Technical_Specialist_Folder/fhir/Assets/UKCore.R4.STU.02.00.00/package:/home/service/fhir/R4'
-        image: 'nhsdigitalmait/fhir_validator_config:20210805'
+            - '${HOME}/Scratch/data:/home/service/data'
+            - '${HOME}/Technical_Specialist_Folder/TerminologyServer/TerminologyServerLoginDetails:/home/service/access_token'
+            - '${HOME}/Technical_Specialist_Folder/fhir/Assets/NHSD.Assets.STU3_1.4.0/node_modules/NHSD.Assets.STU3:/home/service/fhir/STU3'
+            - '${HOME}Scratch/20210819/package:/home/service/fhir/R4'
+        environment:
+            - terminologyserveraccesstokenlocation=/home/service/access_token/fhir_terminology_server_access_token.txt
+        image: 'nhsdigitalmait/fhir_validator_config:20211101'
