implemented latest tkw ability to ingest npm packages

--- a/tkw-x.multiversion.properties
+++ b/tkw-x.multiversion.properties
@@ -28,7 +28,7 @@ tks.savedmessages TKW_ROOT/config/FHIR_VALIDATOR_SERVER/all_evidence
 tks.transportlist HttpTransport
 #
 tks.HttpTransport.listenaddr 0.0.0.0
-tks.HttpTransport.listenport 4435
+tks.HttpTransport.listenport 4848
 
 # The adminlistenport and adminlistenaddr is used by the TKW MTH console for dynamic reconfiguration of the simulator ruleset
 # and provision of the getepoch service
@@ -134,9 +134,9 @@ tks.validator.check.cdarenderer	uk.nhs.digital.mait.tkwx.tk.internalservices.val
 # Validator FHIR Version
 tks.validator.hapifhirvalidator.stu3.fhir.version DSTU3
 # Assets
-tks.validator.hapifhirvalidator.stu3.assetdir /home/riro/Technical_Specialist_Folder/fhir/Assets/NHSD.Assets.STU3_1.4.0/node_modules/NHSD.Assets.STU3
-tks.validator.hapifhirvalidator.stu3.assetdir.ignore /home/riro/Technical_Specialist_Folder/fhir/Assets/NHSD.Assets.STU3_1.4.0/node_modules/NHSD.Assets.STU3/examples/
-tks.validator.hapifhirvalidator.stu3.profileversionfilelocation /home/riro/Technical_Specialist_Folder/fhir/Assets/NHSD.Assets.STU3_1.4.0/node_modules/NHSD.Assets.STU3/package.json
+tks.validator.hapifhirvalidator.stu3.assetdir ${FHIR_ASSETS_STU3_ROOT}
+tks.validator.hapifhirvalidator.stu3.assetdir.ignore ${FHIR_ASSETS_STU3_ROOT}/examples/
+tks.validator.hapifhirvalidator.stu3.profileversionfilelocation ${FHIR_ASSETS_STU3_ROOT}/package.json
 # Validation options
 tks.validator.hapifhirvalidator.stu3.schemavalidate N
 tks.validator.hapifhirvalidator.stu3.schematronvalidate N
@@ -159,9 +159,7 @@ tks.validator.hapifhirvalidator.stu3.primingresource TKW_ROOT/config/FHIR_VALIDA
 # Validator FHIR Version
 tks.validator.hapifhirvalidator.r4.fhir.version R4
 # Assets
-tks.validator.hapifhirvalidator.r4.assetdir /home/riro/Scratch/20210819/package
-tks.validator.hapifhirvalidator.r4.assetdir.ignore /home/riro/Scratch/20210819/package/examples/
-tks.validator.hapifhirvalidator.r4.profileversionfilelocation /home/riro/Scratch/20210819/package/package.json
+###### ASSETS DEFINED IN THE EXTERNAL PROPERTIES FILE ############
 # Validation options
 tks.validator.hapifhirvalidator.r4.schemavalidate N
 tks.validator.hapifhirvalidator.r4.schematronvalidate N
@@ -170,7 +168,7 @@ tks.validator.hapifhirvalidator.r4.strictparservalidation N
 #switch to turn on/off terminology checking
 tks.validator.hapifhirvalidator.r4.noterminologychecks N
 #tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.remoteterminologyserviceurl https://ontology.nhs.uk/production1/fhir
-tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.remoteterminologyserviceurl https://ontology.nhs.uk/staging/fhir
+#tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.remoteterminologyserviceurl https://ontology.nhs.uk/authoring/fhir
 #tks.validator.hapifhirvalidator.r4.terminologyserveraccesstokenlocation /home/riro/Technical_Specialist_Folder/TerminologyServer/TerminologyServerLoginDetails/fhir_terminology_server_access_token.txt
 #Lowest report level. Allowable levels in ascending order are: INFORMATION, WARNING, ERROR, FATAL
 tks.validator.hapifhirvalidator.r4.minimumreportlevel INFORMATION
@@ -183,11 +181,11 @@ tks.validator.hapifhirvalidator.r4.filter.2 ERROR Unable to find matching profil
 # This way all the profiles will be loaded into hapi fhir validator library 
 tks.validator.hapifhirvalidator.r4.primingresource TKW_ROOT/config/FHIR_VALIDATOR_SERVER/validator_config/primingresource/R4_primer.xml
 
-tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.caching N
+tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.caching Y
 tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.commoncodesystemsterminologyservice Y
 tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.inmemoryterminologyserver Y
 tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.prepopulated Y
-
+tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.snapshotgenerating Y
 tks.validator.interaction.map.TESTYTEST POST ^.*$
 
 tks.classname.Validator	uk.nhs.digital.mait.tkwx.tk.internalservices.ValidatorService
@@ -220,3 +218,5 @@ tks.fhir.version R4
 #Turn off the log signing so that the evidence folder is not cluttered
 tks.skipsignlogs Y
 
+#Override properties file(s)
+tks.external.properties ${EXT_CONFIG_ROOT}/tkw-x.fhirvalidator.external.properties
