--- a/docker-compose_fhir_validator.yml
+++ b/docker-compose_fhir_validator.yml
@@ -3,10 +3,11 @@ services:
     fhir_validator_config:
         network_mode : "host"
         volumes:
+            - '${HOME}/TKW-5.0.5/TKW/config:/home/service/config'
             - '${HOME}/Scratch/data:/home/service/data'
             - '${HOME}/Technical_Specialist_Folder/TerminologyServer/TerminologyServerLoginDetails:/home/service/access_token'
             - '${HOME}/Technical_Specialist_Folder/fhir/Assets/NHSD.Assets.STU3_1.4.0/node_modules/NHSD.Assets.STU3:/home/service/fhir/STU3'
-            - '${HOME}Scratch/20210819/package:/home/service/fhir/R4'
+            - '${HOME}/Technical_Specialist_Folder/fhir/Assets/npm_tars:/home/service/fhir/R4'
         environment:
             - terminologyserveraccesstokenlocation=/home/service/access_token/fhir_terminology_server_access_token.txt
         image: 'nhsdigitalmait/fhir_validator_config:20211101'
