--- a/tkw-x.multiversion.properties
+++ b/tkw-x.multiversion.properties
@@ -134,9 +134,7 @@ tks.validator.check.cdarenderer	uk.nhs.digital.mait.tkwx.tk.internalservices.val
 # Validator FHIR Version
 tks.validator.hapifhirvalidator.stu3.fhir.version DSTU3
 # Assets
-tks.validator.hapifhirvalidator.stu3.assetdir ${FHIR_ASSETS_STU3_ROOT}
-tks.validator.hapifhirvalidator.stu3.assetdir.ignore ${FHIR_ASSETS_STU3_ROOT}/examples/
-tks.validator.hapifhirvalidator.stu3.profileversionfilelocation ${FHIR_ASSETS_STU3_ROOT}/package.json
+###### ASSETS DEFINED IN THE EXTERNAL PROPERTIES FILE ############
 # Validation options
 tks.validator.hapifhirvalidator.stu3.schemavalidate N
 tks.validator.hapifhirvalidator.stu3.schematronvalidate N
@@ -145,12 +143,6 @@ tks.validator.hapifhirvalidator.stu3.strictparservalidation N
 #switch to turn on/off terminology checking
 tks.validator.hapifhirvalidator.stu3.noterminologychecks N
 #tks.validator.hapifhirvalidator.stu3.includevalidationsupportmodule.remoteterminologyserviceurl https://ontology.nhs.uk/production1/fhir
-#Lowest report level. Allowable levels in ascending order are: INFORMATION, WARNING, ERROR, FATAL
-tks.validator.hapifhirvalidator.stu3.minimumreportlevel INFORMATION
-#There can be any number of filters which need to be incrementally indexed from 0. The first term defines which report level should be filtered and the rest is the term on which to filter
-tks.validator.hapifhirvalidator.stu3.filter.0 ERROR This element is not allowed by the profile https://fhir.nhs.uk/STU3/StructureDefinition/ITK-Message-Bundle-1
-tks.validator.hapifhirvalidator.stu3.filter.1 ERROR This element is not allowed by the profile https://fhir.nhs.uk/STU3/StructureDefinition/ITK-Document-Bundle-1
-tks.validator.hapifhirvalidator.stu3.filter.2 ERROR Unable to find matching profile for
 # Priming resource (in XML format) to load all the profiles into the hapi fhir validator before it receives its first message. 
 # This message should be as short as possible but containing a base class and CodeSystem/ValueSet. 
 # This way all the profiles will be loaded into hapi fhir validator library 
@@ -170,20 +162,16 @@ tks.validator.hapifhirvalidator.r4.noterminologychecks N
 #tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.remoteterminologyserviceurl https://ontology.nhs.uk/production1/fhir
 #tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.remoteterminologyserviceurl https://ontology.nhs.uk/authoring/fhir
 #tks.validator.hapifhirvalidator.r4.terminologyserveraccesstokenlocation /home/riro/Technical_Specialist_Folder/TerminologyServer/TerminologyServerLoginDetails/fhir_terminology_server_access_token.txt
-#Lowest report level. Allowable levels in ascending order are: INFORMATION, WARNING, ERROR, FATAL
-tks.validator.hapifhirvalidator.r4.minimumreportlevel INFORMATION
-#There can be any number of filters which need to be incrementally indexed from 0. The first term defines which report level should be filtered and the rest is the term on which to filter
-tks.validator.hapifhirvalidator.r4.filter.0 ERROR This element is not allowed by the profile https://fhir.nhs.uk/R4/StructureDefinition/ITK-Message-Bundle-1
-tks.validator.hapifhirvalidator.r4.filter.1 ERROR This element is not allowed by the profile https://fhir.nhs.uk/R4/StructureDefinition/ITK-Document-Bundle-1
-tks.validator.hapifhirvalidator.r4.filter.2 ERROR Unable to find matching profile for
+
+
 # Priming resource (in XML format) to load all the profiles into the hapi fhir validator before it receives its first message. 
 # This message should be as short as possible but containing a base class and CodeSystem/ValueSet. 
 # This way all the profiles will be loaded into hapi fhir validator library 
 tks.validator.hapifhirvalidator.r4.primingresource TKW_ROOT/config/FHIR_VALIDATOR_SERVER/validator_config/primingresource/R4_primer.xml
 
-tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.caching Y
+tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.caching N
 tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.commoncodesystemsterminologyservice Y
-tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.inmemoryterminologyserver Y
+tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.inmemoryterminologyserver N
 tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.prepopulated Y
 tks.validator.hapifhirvalidator.r4.includevalidationsupportmodule.snapshotgenerating Y
 tks.validator.interaction.map.TESTYTEST POST ^.*$
@@ -218,5 +206,8 @@ tks.fhir.version R4
 #Turn off the log signing so that the evidence folder is not cluttered
 tks.skipsignlogs Y
 
+# This property extends the default 64 character max length for json to xml conversion - This is needed for validation checks for longer JWT payload elements (>64chars)
+tks.jsonconverter.JsonXmlConverter.attributemaxlength 256
+
 #Override properties file(s)
-tks.external.properties ${EXT_CONFIG_ROOT}/tkw-x.fhirvalidator.external.properties
+tks.external.properties TKW_ROOT/config/FHIR_VALIDATOR_SERVER/external_configs/tkw-x.fhirvalidator.external.properties
